<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_merger</name>
  <version>0.0.0</version>
  <description>Point cloud merger package</description>

  <maintainer email="schmidrobin@outlook.com">Robin Schmid</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>message_filters</depend>
  <depend>nodelet</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>

  <export>
    <nodelet plugin="${prefix}/pcl_ros_plugins.xml" />
  </export>
</package>
